--- a/style.css
+++ b/style.css
@@ -15,14 +15,24 @@ body {
   font-size: 1rem;
 }
 
+a {
+  text-decoration: none;
+}
+
+#slide {
+  display: flex;
+}
+
 #header-bg {
   background: url("images/desktop-image-hero-1.jpg");
-  background-size: cover;
+  background-size: auto;
+  background-repeat: no-repeat;
 }
 
 header {
   width: 66%;
-  height: 90vh;
+  height: 64.5vh;
+  flex: 3;
 }
 header nav {
   padding-left: 5rem;
@@ -37,6 +47,60 @@ header nav ul {
 header nav ul li {
   margin-right: 1rem;
   color: white;
+}
+
+.slide-info {
+  flex: 2;
+  align-self: center;
+}
+.slide-info .info-text {
+  margin: 0 auto;
+  width: 80%;
+}
+.slide-info .info-text h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.arrows {
+  align-self: flex-end;
+  display: flex;
+}
+.arrows button {
+  background: black;
+  border: none;
+  padding: 2rem;
+}
+.arrows button:focus, .arrows button:active {
+  outline: none;
+}
+
+.bottom {
+  display: flex;
+  margin-bottom: 0;
+}
+
+.dark {
+  flex: 2;
+}
+.dark img {
+  width: 100%;
+  height: 100%;
+}
+
+.about {
+  flex: 3;
+  margin: 0 auto;
+}
+.about h2 {
+  width: 50%;
+}
+
+.light {
+  flex: 2;
+}
+.light img {
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
